--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <h1><a href="index.html">library</a></h1>
-        <a href="https://github.com/JphOrq" target="_blank"><i class="fa-brands fa-xl fa-dev"></i></a>
+        <a href="https://github.com/JphOrq/Library" target="_blank"><i class="fa-brands fa-xl fa-dev"></i></a>
     </header>
 
     <div class="new-book">
