--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <div class="book-container">
     </div>
     <footer>
-        <p>Copyright ©
-            <script>
+        <p>&copy; 2023 | JphOrq
+            <!-- <script>
                 document.write(new Date().getFullYear())
-            </script> JphOrq
+            </script> -->
             <a href="https://github.com/JphOrq" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a>
         </p>
     </footer>
